# chess-board

./: chess_board.ipynb  pyproject.toml
.ipynb_checkpoints/: chess_board-checkpoint.ipynb
