[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["corey-marchand <corey.marchand@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
jupyterlab = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
